--- a/Project1SFML/Project1SFML/Project1SFML.vcxproj.filters
+++ b/Project1SFML/Project1SFML/Project1SFML.vcxproj.filters
@@ -13,14 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Archivos de recursos\Image">
+      <UniqueIdentifier>{1886ab71-0b7a-4193-96e9-57a7dede9b36}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de recursos\File">
+      <UniqueIdentifier>{e75bfc8c-67ff-4ccb-a752-7a2d79e78fca}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Downloads\Imagen1.jpeg">
-      <Filter>Archivos de recursos</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Menu.h">
+    <ClInclude Include="Grid.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="GridNode.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
@@ -28,8 +35,39 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Sfml.cpp">
+    <ClCompile Include="File.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
+    <ClCompile Include="Nivel3.txt">
+      <Filter>Archivos de recursos\File</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="GridNode.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Nivel1.txt">
+      <Filter>Archivos de recursos\File</Filter>
+    </Text>
+    <Text Include="Nivel2.txt">
+      <Filter>Archivos de recursos\File</Filter>
+    </Text>
+    <Text Include="Nivel4.txt">
+      <Filter>Archivos de recursos\File</Filter>
+    </Text>
+    <Text Include="Nivel5.txt">
+      <Filter>Archivos de recursos\File</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Downloads\Imagen1.jpeg">
+      <Filter>Archivos de recursos\Image</Filter>
+    </Image>
   </ItemGroup>
 </Project>
